# PhoenixFrame

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  NEXT_DEVELOPMENT_PLAN.md  PhoenixFrame - 企业级自动化测试解决方案设计文档.md  PhoenixFrame - 企业级自动化测试解决方案设计文档.v3.1.bak.md  PhoenixFrame-审查报告.md  PhoenixFrame-开发规则书.md  PhoenixFrame-开发计划排期.md  PhoenixFrame-测试用例.md  README.md  loginpage_page.py  manual_test_config_hot_reload.py  pyproject.toml  registration.py  test_basic_integration.py  test_comprehensive.py  test_core_features.py  test_final.py  test_integration.py  test_performance_simple.py  test_simple.py  test_standalone.py
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: phoenix.yaml
docs/: codegen.md  troubleshooting.md
examples/: api_testing_example.py  bdd_enhanced_example.py  config_management_example.py  data_management_example.py  logging_enhancement_example.py  performance_test_example.py  performance_testing_example.py  performance_testing_minimal.py  test_discovery_and_execution_example.py  web_automation_enhanced_example.py  web_automation_example.py
src/phoenixframe/: __init__.py  cli.py  doctor.py  env.py
src/phoenixframe/api/: __init__.py  assertions.py  auth.py  client.py  declarative_runner.py  enhanced_client.py  response.py  validators.py
src/phoenixframe/bdd/: __init__.py  steps.py  tools.py
src/phoenixframe/cli/: __init__.py  doctor.py
src/phoenixframe/codegen/: api_generator.py  core.py  har_parser.py  openapi_generator.py  openapi_parser.py  playwright_parser.py  pom_generator.py
src/phoenixframe/core/: __init__.py  config.py  demo_parallel.py  dependency_injection.py  hooks.py  lifecycle.py  parallel_executor.py  plugin_manager.py  registry.py  runner.py  test_executor.py
src/phoenixframe/data/: __init__.py  database.py  dependencies.py  factories.py  version.py
src/phoenixframe/observability/: __init__.py  demo_performance.py  demo_reporting.py  demo_tracing.py  logger.py  metrics.py  performance_dashboard.py  performance_integration.py  performance_monitor.py  report_collector.py  report_generator.py  tracer.py
src/phoenixframe/performance/: __init__.py
src/phoenixframe/security/: __init__.py  crypto.py  key_manager.py
src/phoenixframe/utils/: __init__.py  data.py  data_utils.py  file.py  file_utils.py  ocr.py  time.py
src/phoenixframe/web/: __init__.py  base_driver.py  base_page.py  driver_manager.py  playwright_driver.py  playwright_driver_backup.py  playwright_driver_broken.py  playwright_page.py  selenium_driver.py  selenium_page.py
tests/: conftest.py  test_doctor.py  test_env.py
tests/api/: test_api_client.py  test_api_client_enhanced.py  test_api_response.py  test_auth.py  test_declarative_runner.py  test_enhanced_client.py
tests/bdd/: test_bdd_integration.py
tests/cli/: test_cli_comprehensive.py  test_init_command.py  test_report_command.py  test_run_command.py
tests/codegen/: test_api_generator.py  test_har_parser.py  test_openapi_generator.py  test_openapi_parser.py  test_playwright_parser.py  test_pom_generator.py
tests/core/: test_config_hot_reload.py  test_config_loader.py  test_hooks.py  test_lifecycle_hooks.py  test_phoenix_runner.py  test_plugin_system.py  test_pytest_integration.py  test_runner.py  test_test_discovery_and_execution.py
tests/data/: test_data_management.py
tests/integration/: test_module_integration.py
tests/observability/: test_basic_logging.py  test_logger.py  test_logging_enhancement.py
tests/performance/: test_performance_integration.py
tests/security/: test_crypto.py  test_key_manager.py
tests/utils/: test_data_utils.py  test_ocr.py
tests/web/: test_base_page.py  test_enhanced_driver.py  test_playwright_driver.py  test_playwright_enhanced.py  test_selenium_basic.py  test_selenium_driver.py
