[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoenixframe"
version = "3.2.0"
description = "An enterprise-grade test automation framework."
authors = [{ name = "Your Name", email = "your@email.com" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/your-repo/PhoenixFrame"
"Bug Tracker" = "https://github.com/your-repo/PhoenixFrame/issues"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
phoenix = "phoenixframe.cli:main"

[project.dependencies]
"pytest>=7.4.0"
"click>=8.1.0"
"pydantic>=2.4.0"
"pyyaml>=6.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "C4", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
